--- a/styles/styles.css
+++ b/styles/styles.css
@@ -228,7 +228,7 @@ section h2::after {
 #home {
     text-align: center;
     position: relative;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 #home::before {
