checking if the images gets updated or not. might need to checkout to the previous commit if it does'nt.

--- a/styles/styles_blog.css
+++ b/styles/styles_blog.css
@@ -1,5 +1,5 @@
         :root {
-            --primary-color: #2b5876;
+            --primary-color: #235374;
             --secondary-color: #4e4376;
             --accent-color: #00b4db;
             --accent-light: #6dd5ed;
